# priorpatch

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  release.yml  test.yml
api/: index.html
architecture/: index.html
benchmarks/: README.md  benchmark_performance.py  dataset_benchmark.py  profile_performance.py
config/: detectors.json
detectors/: index.html
docs/: api.md  architecture.md  detectors.md  index.md  installation.md  limitations.md  logging.md  usage.md
examples/: README.md  _path_helper.py  basic_usage.py  batch_processing.py  custom_detectors.py  individual_detector_analysis.py  performance_comparison.py
installation/: index.html
limitations/: index.html
logging/: index.html
priorpatch/: __init__.py  __main__.py  cli.py  core.py  gpu_backend.py  utils.py
priorpatch/detectors/: __init__.py  base.py  benford_law.py  cfa_artifact.py  chromatic_aberration.py  color_stats.py  copy_move.py  dct_cooccurrence.py  ela.py  fft_dct.py  gan_fingerprint.py  jpeg_ghost.py  lbp_texture.py  lighting_consistency.py  neighbor_consistency.py  noise_consistency.py  prnu_wavelet.py  registry.py  residual_energy.py
scripts/: run_demo.sh
search/: search_index.json
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_detector_individual.py  test_detectors.py  test_edge_cases.py  test_ensemble.py  test_failure_scenarios.py  test_gpu_backend.py  test_new_detectors.py  test_real_images.py  test_registry.py  test_utils.py
usage/: index.html
